[project]
name = "dronetrack"
version = "0.1.0"
description = "Render DJI SRT flight telemetry as a corner-map overlay on drone video"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "pillow>=11.2.1",
]

[project.scripts]
dronetrack = "dronetrack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dronetrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
